# kg-llm-completion

./: .env.example  .gitignore  CONTEXT_HANDOFF.md  README.md  kg_llm_project_plan.md  pyproject.toml
configs/kge/: complex.yaml  quate.yaml  rotate.yaml  transe.yaml
configs/sft/: qwen3_0.6b.yaml  qwen3_1.7b.yaml  qwen3_4b.yaml
docs/: hardware_notes.md  kaggle_runbook.md
reports/: writeup_notes.md
scripts/: check_cache.py  check_cache_debug.py  check_mask.py  crosscheck_kge_eval.py  download_fb15k237.py  eval_llm_vllm.py  eval_llm_zeroshot.py  run_frequency_baseline.py  train_kge.py  train_sft.py
src/kg_llm/: __init__.py
src/kg_llm/data/: fb15k237.py
src/kg_llm/eval/: baselines.py  ranking.py
src/kg_llm/kge/: pykeen_scorer.py
src/kg_llm/llm/: scorer.py  sft_data.py  vllm_scorer.py
tests/: test_llm_scorer.py  test_ranking.py  test_sft_data.py
